--- a/donate.html
+++ b/donate.html
@@ -2,29 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Help All</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Help All</title>
 </head>
 
 <body>
 
     <div id="image-view3">
         <nav class="navbar navbar-expand-md bg-nav text">
-            <!-- Brand --------------------------------------->
+            <!--- Brand --------------------------------------->
             <a class="navbar-brand" href="index.html"><u class="font-text2">Help All</u><i class="far fa-heart"></i></a>
 
-            <!-- Toggler/collapsibe Button ------------------->
+            <!--- Toggler/collapsibe Button ------------------->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"><i class="fas fa-bars bg-nav"></i></span>
             </button>
 
-            <!-- Navbar links -------------------------------->
+            <!--- Navbar links -------------------------------->
             <div class="collapse navbar-collapse justify-content-end font-size" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li>
@@ -39,10 +46,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="container top">
-            <br>
-            <h1 id="logo"> Donate<i class="far fa-heart"></i></h1>
-        </div>
+        
     </div>
     <!---Form Credit Card Payment--------------------------------------->
 <section class="bg-container-section">
@@ -105,16 +109,16 @@
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
 
-                        <button class="btn btn-pulse bnt-color btn-success badge-pill" type="submit">Donate</button>
+                        <button class="btn btn-pulse bnt-color badge-pill" type="submit">Donate</button>
                     </form>
                 </div>
-                <!---------Thankful image--------------------------------------------->
+                <!---Thankful image--------------------------------------------->
                 <div class="col-sm-6 d-none d-sm-block circle-container4" id="thankful-image">
                 </div>
             </div>
         </div>
 </section>
-    <!----------Footer----------------------------------------------------->
+    <!---Footer----------------------------------------------------->
     <footer id="footer">
         <div class="row col-12 footer-msg footer-align">
             <h2><i> TEN in one goal is just the beginning!</i></h2></div>
@@ -124,22 +128,22 @@
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="https://www.facebook.com/" target="_blank">
-							<i class="fab fa-facebook" aria-hidden="true"></i>
-							<span class="sr-only">Facebook</span></a>
+							<i class="fab fa-facebook facebook" aria-hidden="true"></i>
+							<span class="sr-only ">Facebook</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://twitter.com/" target="_blank">
-							<i class="fab fa-twitter" aria-hidden="true"></i>
+							<i class="fab fa-twitter twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://www.instagram.com/" target="_blank">
-							<i class="fab fa-instagram" aria-hidden="true"></i>
+							<i class="fab fa-instagram instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
                             </li>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
-							<i class="fab fa-youtube" aria-hidden="true"></i>
+							<i class="fab fa-youtube youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
 					</li>
 				</ul>
