--- a/our-team.html
+++ b/our-team.html
@@ -2,28 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Help All</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Help All</title>
 </head>
 
 <body>
     <div id="image-view2">
         <nav class="navbar navbar-expand-md bg-nav text">
-            <!----- Brand -------------------------------------------->
+            <!--- Brand -------------------------------------------->
             <a class="navbar-brand" href="index.html"><u class="font-text2">Help All</u><i class="far fa-heart"></i></a>
 
-            <!----- Toggler/collapsibe Button ------------------------>
+            <!--- Toggler/collapsibe Button ------------------------>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"><i class="fas fa-bars bg-nav"></i></span>
             </button>
 
-            <!-- Navbar links ---------------------------------------->
+            <!--- Navbar links ---------------------------------------->
             <div class="collapse navbar-collapse justify-content-end font-size" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li>
@@ -38,20 +45,18 @@
                 </ul>
             </div>
         </nav>
-        <div class="container top">
-            <h1 id="logo"> Our Team<i class="far fa-heart"></i></h1>
-        </div>
+       
     </div>
 
-    <!-------Why Charities are important ----------------------------------------->
+    <!---Why Charities are important ----------------------------------------->
     <section class="content-color2 bg-container-section text-center text">
         <h2 class="uppercase welcome pad-our-team">Charities</h2>
-        <p class="description pad-p">Many of Ireland’s charities are part-funded by the state to provide health, social and community services, and they form a critical part of Ireland’s social infrastructure, supporting people and communities the length and breadth of the country. Organisations in the sector make available assets and facilities that our health, community and social services could simply not function without, click <a href="donate.html" class="link">here</a> to be part of this support.</p>
+        <p class="description pad-p">Many of Ireland’s charities are part-funded by the state to provide health, social and community services, and they form a critical part of Ireland’s social infrastructure, supporting people and communities the length and breadth of the country. Organisations in the sector make available assets and facilities that our health, community and social services could simply not function without, click <a href="donate.html"><i>here</i></a> to be part of this support.</p>
 
         <hr size="10" width="65%" color="#616161">
-        <!--------Our Group of Charities divided in 3 Columns  ------------------->
+        <!---Our Group of Charities divided in 3 Columns  ------------------->
         <h3 class="uppercase description">Our Supported Charities :</h3>
-        <!--------First Column---------------------------------------------------->
+        <!---First Column---------------------------------------------------->
         <div class="row col-sm-12">
             <div class="col-sm-4">
                 <div class="col-sx-12 card">
@@ -66,8 +71,8 @@
                         In 1985, two years after the initial research Focus Point (now Focus Ireland) opened its doors in Eustace Street, Dublin. The organisation provided streetwork services to young people, advice, advocacy, information and help with finding a home as well as a warm welcoming place to meet and have a low-cost meal.Focus Ireland is Ireland's leading not for profit working to prevent people becoming, remaining or returning to homelessness,
                     </p>
                     <a href="https://www.focusireland.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="col-sx-12 card">
                     <h2 class="grow">Enable Ireland</h2>
@@ -81,8 +86,8 @@
                         Enable Ireland provides services to children and adults with disabilities and their families from over 40 locations in 15 counties. Covering childhood to adulthood our expert teams work with the individual and their family on a plan for each life stage.
                     </p>
                     <a href="https://www.enableireland.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="col-sx-12 card">
                     <h2 class="grow">Irish Cancer Society</h2>
@@ -96,8 +101,8 @@
                         Since 2010, the Irish Cancer Society has invested over €20 million into hundreds of innovative research projects. These projects have contributed enormously to our understanding of cancer, how it develops and how to treat different forms of cancer.
                     </p>
                     <a href="https://www.cancer.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="circle-container2">
 
@@ -105,7 +110,7 @@
 
                     </div>
                 </div>
-                <!---------Second Column---------------------------------------------->
+                <!---Second Column---------------------------------------------->
             </div>
             <div class="col-sm-4">
                 <div class="col-sx-12">
@@ -121,8 +126,8 @@
                             Irish Wheelchair Association (IWA) has gone on to become an important provider of quality services to people with limited mobility throughout the country. Today, our association is made up of a vibrant network of 20,000 members and 2,300 staff, as well as many dedicated volunteers.
                         </p>
                         <a href="https://www.iwa.ie/" target="_blank">
-                            <i class="smaller-font-sizer">Find out more</i></a>
-                        <hr class="hr-text">
+                            <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                        <hr id="hr-text">
                     </div>
                     <div class="col-sx-12 card">
                         <h2 class="grow">Irish Guide Dogs for the Blind</h2>
@@ -137,8 +142,8 @@
                             Irish Guide Dogs is Ireland’s national charity dedicated to helping people who are vision impaired and families of children with autism to achieve improved mobility and independence.
                         </p>
                         <a href="https://guidedogs.ie/" target="_blank">
-                            <i class="smaller-font-sizer">Find out more</i></a>
-                        <hr class="hr-text">
+                            <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                        <hr id="hr-text">
                     </div>
 
                     <div class="col-sx-12 card">
@@ -153,8 +158,8 @@
                             Founded in 2002, Habitat for Humanity Ireland is a non-profit organisation, working on behalf of and in partnership with Habitat for Humanity International, in Ireland. We are dedicated to eliminating substandard housing worldwide and to making adequate, affordable shelter a matter of conscience and action.
                         </p>
                         <a href="https://www.habitatireland.ie/" target="_blank">
-                            <i class="smaller-font-sizer">Find out more</i></a>
-                        <hr class="hr-text">
+                            <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                        <hr id="hr-text">
                     </div>
                     <div class="col-sx-12 card">
                         <h2 class="grow">Down Syndrome Ireland</h2>
@@ -168,12 +173,12 @@
                             We are dedicated to being the primary source of information and support to people with Down syndrome, their families and the professional community, working towards an improved quality of life for our members along with a respect and acceptance of people with Down syndrome as valued members of society.
                         </p>
                         <a href="https://downsyndrome.ie/" target="_blank">
-                            <i class="smaller-font-sizer">Find out more</i></a>
-                        <hr class="hr-text">
+                            <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                        <hr id="hr-text">
                     </div>
                 </div>
             </div>
-            <!-----------Third Column---------------------------------------------->
+            <!---Third Column---------------------------------------------->
             <div class="col-sm-4 pad">
 
                 <div class="col-sx-12 card">
@@ -188,8 +193,8 @@
                         Since 1992, Make-A-Wish has granted wishes for more than 2,500 brave children across Ireland, including 211 wishes granted in 2018 alone. A wish granted is true magic for the child, providing respite from their normal routines of hospitals, doctors and treatment. Make-A-Wish does not receive any government funding, and relies overwhelmingly on the kindness of the Irish public to continue granting wishes.
                     </p>
                     <a href="https://www.makeawish.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="col-sx-12 card">
                     <h2 class="grow">Autism Assistance Dogs Ireland</h2>
@@ -203,8 +208,8 @@
                         We are a national charity focused on transforming the lives of children with autism and their families, by training and providing highly skilled 'task specific' assistance dogs to children with autism, who are struggling with the sometimes distressing elements of this invisible disability.
                     </p>
                     <a href="https://www.autismassistancedogsireland.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="col-sx-12 card">
                     <h2 class="grow">Irish Heart Foundation</h2>
@@ -218,8 +223,8 @@
                         We campaign to influence Government policy in order to improve care for patients and to prevent premature deaths. We are fighting for real change for families affected by heart disease and stroke
                     </p>
                     <a href="https://irishheart.ie/" target="_blank">
-                        <i class="smaller-font-sizer">Find out more</i></a>
-                    <hr class="hr-text">
+                        <i class="smaller-font-sizer bg-find-out-more">Find out more</i></a>
+                    <hr id="hr-text">
                 </div>
                 <div class="circle-container2">
 
@@ -232,7 +237,7 @@
         </div>
     </section>
 
-    <!------Footer-------------------------------------------------->
+    <!---Footer-------------------------------------------------->
    <footer id="footer">
         <div class="row col-12 footer-msg footer-align">
             <h2><i> TEN in one goal is just the beginning!</i></h2></div>
@@ -242,22 +247,22 @@
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="https://www.facebook.com/" target="_blank">
-							<i class="fab fa-facebook" aria-hidden="true"></i>
-							<span class="sr-only">Facebook</span></a>
+							<i class="fab fa-facebook facebook" aria-hidden="true"></i>
+							<span class="sr-only ">Facebook</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://twitter.com/" target="_blank">
-							<i class="fab fa-twitter" aria-hidden="true"></i>
+							<i class="fab fa-twitter twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://www.instagram.com/" target="_blank">
-							<i class="fab fa-instagram" aria-hidden="true"></i>
+							<i class="fab fa-instagram instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
                             </li>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
-							<i class="fab fa-youtube" aria-hidden="true"></i>
+							<i class="fab fa-youtube youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
 					</li>
 				</ul>
